--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>Register</h1>
-    <form>
-        <div class="mb-3">
-            <input type="text" class="form-control input" id="username" placeholder="Kullanıcı adınızı girin">
+    <h1 class="text-center">Register</h1>
+    <form class="container">
+        <div class="mb-3 mt-4">
+            <input type="text" class="form-control w-50 input" id="username" placeholder="Enter Your UserName ">
         </div>
         <div class="mb-3">
-          <input type="password" class="form-control password" id="exampleInputPassword1">
+          <input type="password" class="form-control w-50 password" id="exampleInputPassword1" placeholder="Enter Your Password">
         </div>
         <div>
 
-            <button type="sub mit" class="btn btn-primary">Register</button>
+            <button type="sub mit" class="btn btn-lg btn-primary">Register</button>
         </div>
       </form>
+      <div>
+        <p class="container text-center">username kısmına F1362-Galip Duğan,F1669-Gümüş,Q3586-Ali isimlerinden birisi ile giriş yapıldığında ve password kısmına en az 8 karakter girildiğinde  ve password en az bir tane özel karakter !?=)%&* içerdiği koşullarda alert ile bize  sorulara erişebilirsiniz uyarısı döndürüyor</p>
+      </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="./app.js"></script>
