--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
             <button type="sub mit" class="btn btn-lg btn-primary">Register</button>
         </div>
       </form>
-      <div>
-        <p class="container text-center">username kısmına F1362-Galip Duğan,F1669-Gümüş,Q3586-Ali isimlerinden birisi ile giriş yapıldığında ve password kısmına en az 8 karakter girildiğinde  ve password en az bir tane özel karakter !?=)%&* içerdiği koşullarda alert ile bize  sorulara erişebilirsiniz uyarısı döndürüyor</p>
-      </div>
+      <!-- <div>
+        <p class="container text-center">username kısmına F1362-Galip Duğan,
+          F1669-Gümüş,Q3586-Ali isimlerinden birisi ile giriş yapıldığında 
+          ve password kısmına en az 8 karakter girildiğinde  ve password en
+           az bir tane özel karakter !?=%&* içerdiği koşullarda alert ile bize  sorulara erişebilirsiniz uyarısı döndürüyor</p>
+      </div> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="./app.js"></script>
